# marinade_dashboard

./: index.js  package-lock.json  package.json  update-json.sh  validators.json
lib/: handlers.js  helpers.js  mSOLHandler.js  mndeHandler.js
marinade-anchor/: .gitignore  Anchor.toml  Cargo.toml  README.md  mardmin  marinade  test.sh  unit-test.sh  update-scores.sh  validator-manager
marinade-anchor/.github/workflows/: ci.yml
marinade-anchor/cli/admin/: Cargo.toml
marinade-anchor/cli/admin-init/: Cargo.toml
marinade-anchor/cli/admin-init/src/: init.rs  main.rs
marinade-anchor/cli/admin/src/: change_authority.rs  config_marinade.rs  main.rs  set_lp_params.rs  transfer_spl_tokens.rs
marinade-anchor/cli/bot-cli/: Cargo.toml
marinade-anchor/cli/bot-cli/src/: do_work.rs  main.rs  merge_stakes.rs  stake_delta.rs  update_price.rs
marinade-anchor/cli/cli-common/: Cargo.toml
marinade-anchor/cli/cli-common/src/: init_log.rs  lib.rs  log_level_opts.rs  rpc_client_helpers.rs  rpc_marinade.rs  transaction_helpers.rs  util.rs
marinade-anchor/cli/marinade-cli/: Cargo.toml
marinade-anchor/cli/marinade-cli/src/: add_remove_liquidity.rs  claim.rs  deposit_stake_account.rs  liquid_unstake.rs  main.rs  order_unstake.rs  show.rs  stake.rs
marinade-anchor/cli/marstat/: Cargo.toml
marinade-anchor/cli/marstat-server/: Cargo.toml
marinade-anchor/cli/marstat-server/src/: apy.rs  balances.rs  error.rs  farms.rs  main.rs  metrics.rs  tlv.rs
marinade-anchor/cli/marstat/src/: balances.rs  farms.rs  lib.rs  main.rs
marinade-anchor/cli/score-post-process/: Cargo.toml
marinade-anchor/cli/score-post-process/src/: main.rs  process_scores.rs
marinade-anchor/cli/serum-multisig/: Cargo.toml
marinade-anchor/cli/serum-multisig/src/: lib.rs
marinade-anchor/cli/validator-manager/: Cargo.toml
marinade-anchor/cli/validator-manager/src/: add_validator.rs  config_validator_system.rs  emergency_unstake.rs  main.rs  remove_validators.rs  update_scores.rs
marinade-anchor/programs/marinade-finance/: Cargo.toml
marinade-anchor/programs/marinade-finance/tests/: Cargo.toml
marinade-anchor/programs/marinade-finance/tests/src/: initialize.rs  integration_test.rs  lib.rs  reflection.rs  synthetic_testing.rs
marinade-anchor/programs/marinade-finance/tests/src/integration_test/: deposit_sol_liquid_unstake.rs  test_add_remove_liquidity.rs  test_add_remove_validators.rs  test_configure.rs  test_merge.rs  test_unstake_delta.rs
marinade-anchor/programs/marinade-finance/tests/src/sim_fuzzy/: mod.rs  simulation_simple.rs
marinade-anchor/programs/marinade-finance/tests/src/synthetic_testing/: test_deactivate_stake.rs  test_update_price.rs
marinade-anchor/res/: marinade_finance.json
marinade-anchor/scripts/: config_marinade.sh  create-avg-file.sh  deploy-devnet  deploy-localhost  deploy-mainnet-prepare  deploy-testnet  expand_macros.sh  fast-process-scores.sh  init-localhost.sh  init-testnet.sh  process-scores.sh  publish-staking-state  sqlite-import-post-process.sh  verify-code.sh
marinade-anchor/sdk/offchain/: Cargo.toml
marinade-anchor/sdk/offchain-common/: Cargo.toml
marinade-anchor/sdk/offchain-common/src/: lib.rs  signature_builder.rs  transaction_builder.rs
marinade-anchor/sdk/offchain/src/: instruction_helpers.rs  lib.rs
marinade-anchor/sdk/offchain/src/instruction_helpers/: initialize.rs
marinade-anchor/sdk/onchain/: Cargo.toml
marinade-anchor/sdk/onchain/src/: lib.rs
marinade-anchor/sdk/reflection/: Cargo.toml
marinade-anchor/sdk/reflection/src/: accounts_builder.rs  builder.rs  lib.rs  liq_pool.rs  marinade.rs  pubkey_map.rs
marinade-anchor/tests/: marinade-finance.js
marinade-anchor/tests/cli/: main.rb
marinade-anchor/ts/: package-lock.json  package.json  tsconfig.json
marinade-anchor/ts/src/: index.ts  marinade_finance_schema.ts  test.ts
