[package]
name = "mardmin"
version = "0.1.0"
authors = ["aankor <lambdasound@yandex.ru>, lucio tato<luciotato@narwallets.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
solana-cli-config = "1.7.11"
once_cell = "1.7.2"
thiserror = "1.0.24"
derive_more = "0.99.13"
structopt = "0.3.21"
bincode = "1.3.3"
enum_dispatch = "0.3.5"
cli-common = { path = "../cli-common" }
log = "0.4.14"
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }
csv = "1.1"
borsh = "0.9.1"
multisig = { path = "../serum-multisig", package = "serum-multisig" }
base64 = "0.13.0"