[package]
name = "marcrank"
version = "0.1.0"
authors = ["aankor <lambdasound@yandex.ru>","lucio tato <luciotato@narwallets.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
solana-cli-config = "1.7.11"
once_cell = "1.7.2"
thiserror = "1.0.24"
derive_more = "0.99.13"
structopt = "0.3.21"
cli-common = { path = "../cli-common" }
bincode = "1.3.3"
log = "0.4.14"
chrono = "0.4"