[package]
name = "marstat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
solana-cli-config = { version = "1.7.11", optional = true }
quarry-mine = { version = "1.9.0", features = ["no-entrypoint"] }
quarry-anchor-lang = { package = "anchor-lang", version = "0.17.0" }
rug = "1.13.0"
# solana-account-decoder = "1.7.11"
#spl-token = { version = "3.1", features = ["no-entrypoint"], optional = true }
#spl-associated-token-account  = { version = "1.0.2", features = ["no-entrypoint"], optional = true }
#thiserror = "1.0.24"
#derive_more = "0.99.13"
structopt = "0.3.21"
# marinade-finance-offchain-sdk = { path = "../../sdk/offchain", features = ["no-entrypoint"] }
cli-common = { path = "../cli-common" }
# bincode = "1.3.3"
enum_dispatch = "0.3.5"
log = "0.4.14"
bs58 = "0.3.1"
serde_json = "*"
serde = { version = "1.0.125", features = ["derive"] }
postgres = { version = "0.19.1", features = ["with-chrono-0_4"], optional = true }
chrono = "0.4.19"
lazy_static = "1.4.0"

[features]
default = ["solana", "postgres"]
solana = ["solana-cli-config"]

[[bin]]
name = "marstat"
doc = false