[package]
name = "solana-offchain-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.7.11"
once_cell = "1.7.2"
thiserror = "1.0.24"
anyhow = "1.0.40"
bincode = "1.3.3"
spl-token = { version = "3.1", features = ["no-entrypoint"] }
spl-associated-token-account  = { version = "1.0.2", features = ["no-entrypoint"] }