[package]
name = "marinade-finance-offchain-sdk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
log = "0.4.14"
thiserror = "1.0.24"
once_cell = "1.7.2"
solana-offchain-common = { path = "../offchain-common" }
marinade-finance-onchain-sdk = { path = "../onchain" }
# maybe reexport this from offchain-common
anchor-lang = "0.14.0"
anchor-spl = "0.14.0"
spl-token = { version = "3.1", features = ["no-entrypoint"] }

[features]
no-entrypoint = [ "marinade-finance-onchain-sdk/no-entrypoint" ]